--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,7 +1,9 @@
 name: Unit test for EC-CUBE
 on:
-  schedule:
-    - cron: '12 8 * * *'
+  push:
+    branches:
+      - main
+
 jobs:
   phpunit:
     name: PHPUnit
@@ -18,6 +20,13 @@ jobs:
             database_server_version: 14
 
     services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       postgres:
         image: postgres:14
         env:
@@ -42,25 +51,22 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
-
       - name: Setup PHP
         uses: nanasess/setup-php@master
         with:
           php-version: ${{ matrix.php }}
 
       - name: composer install
-        run: composer install --no-scripts --no-dev --no-interaction --optimize-autoloader
+        run: composer install --dev --no-interaction -o --apcu-autoloader
 
       - name: Setup EC-CUBE
         env:
-          APP_ENV: ${{ matrix.app_env }}
           DATABASE_URL: ${{ matrix.database_url }}
           DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
         run: |
           bin/console doctrine:database:create
           bin/console doctrine:schema:create
           bin/console eccube:fixtures:load
-
       - name: PHPUnit
         env:
           APP_ENV: 'test'
